added failure section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -44,20 +44,68 @@
     line-height: 26px;
     padding-right: 160px;
 }
-.btn-primary{
+
+.btn-primary {
     border: 1px solid transparent;
     padding: 13px;
     background-color: #F15B22;
     color: white;
     border-radius: 5px;
 }
-.button{
+
+.button {
     padding-top: 30px;
     padding-right: 160px;
     display: flex;
     justify-content: end;
     align-items: end;
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
     cursor: pointer;
+}
+
+/* body styles */
+
+/* failure section styles */
+.failures-of-previous-section {
+    display: flex;
+    gap: 120px;
+    margin: 100px 300px;
+}
+
+.content-column {
+    padding-top: 300px;
+}
+
+.description {
+    padding-right: 100px;
+}
+
+.column-description {
+    padding-top: 20px;
+    padding-bottom: 15px;
+    color: #444343;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li {
+    color:  #444343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+ul li:before {
+    content: '✓';
+    font-weight: 900;
+    padding-right: 20px;
+    color: fuchsia;
 }
