--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,6 +6,7 @@
 
 .header {
     background-image: url("../images/banner/banner2.png");
+    background-position: center;
     background-size: cover;
     width: 100%;
     height: 800px;
@@ -97,7 +98,7 @@ ul {
 }
 
 ul li {
-    color:  #444343;
+    color: #444343;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
@@ -108,4 +109,127 @@ ul li:before {
     font-weight: 900;
     padding-right: 20px;
     color: fuchsia;
+}
+
+/* plan section styles */
+
+.plan {
+
+    margin: 160px 300px;
+}
+
+.plan-title {
+    text-align: center;
+    color: #151414;
+    font-size: 40px;
+    font-weight: 700;
+    padding-bottom: 50px;
+}
+
+.plans-item {
+    display: flex;
+    justify-content: space-around;
+    gap: 30px;
+}
+
+.icon {
+    padding-left: 35px;
+}
+
+.head {
+    text-align: center;
+}
+
+.descri {
+    color: #737272;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+/* plan styles end */
+/* picture styles start */
+.picture {
+    margin: 130px 230px 100px 380px;
+}
+
+/* footer styles start */
+footer {
+    background-color: black;
+    height: 570px;
+}
+
+.footer-div {
+    margin: 130px 230px 100px 380px;
+    padding-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+
+.future-column {
+    max-width: 50%;
+}
+
+.future-title {
+    margin-bottom: 16px;
+    color: #F8F8F8;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.future-description {
+    padding-right:80px;
+    color: #bdc3c7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 10px;
+}
+
+.future-mail {
+    color:#bdc3c7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 10px;
+}
+
+.future-phone {
+    color: #bdc3c7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 17px;
+}
+.social img{
+    width: 40px;
+    padding-right: 10px;
+}
+
+.subscribe-column {
+    max-width: 50%;
+}
+
+.subscribe-title {
+    color: #FFF;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+input{
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color:black;
+    width: 390px;
+    padding: 20px;
+    display: block;
+    margin-bottom: 20px;
+}
+.subscribe-btn{
+    font-weight: bold;
+    padding: 13px 24px;
+    color: #F15B22;;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    
 }
